cdk.out.test/PrimaryNetworkStack.template.json
{
 "Description": "Network infrastructure for primary region",
 "Resources": {
  "EcommerceVPC0C8C3771": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/Resource"
   }
  },
  "EcommerceVPCPublicSubnet1Subnet0AFBA6BF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/Subnet"
   }
  },
  "EcommerceVPCPublicSubnet1RouteTable8357AAEA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/RouteTable"
   }
  },
  "EcommerceVPCPublicSubnet1RouteTableAssociation8F09899D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet1RouteTable8357AAEA"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPublicSubnet1Subnet0AFBA6BF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EcommerceVPCPublicSubnet1DefaultRoute1D26CE18": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcommerceVPCIGW14978A73"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet1RouteTable8357AAEA"
    }
   },
   "DependsOn": [
    "EcommerceVPCVPCGW4CCAFB9E"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "EcommerceVPCPublicSubnet1EIP216F43BF": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/EIP"
   }
  },
  "EcommerceVPCPublicSubnet1NATGateway56B50EFC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EcommerceVPCPublicSubnet1EIP216F43BF",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPublicSubnet1Subnet0AFBA6BF"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "DependsOn": [
    "EcommerceVPCPublicSubnet1DefaultRoute1D26CE18",
    "EcommerceVPCPublicSubnet1RouteTableAssociation8F09899D"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet1/NATGateway"
   }
  },
  "EcommerceVPCPublicSubnet2Subnet648A4090": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/Subnet"
   }
  },
  "EcommerceVPCPublicSubnet2RouteTable3C1443CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/RouteTable"
   }
  },
  "EcommerceVPCPublicSubnet2RouteTableAssociation41FAADC7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet2RouteTable3C1443CB"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPublicSubnet2Subnet648A4090"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EcommerceVPCPublicSubnet2DefaultRouteF7734C2D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcommerceVPCIGW14978A73"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet2RouteTable3C1443CB"
    }
   },
   "DependsOn": [
    "EcommerceVPCVPCGW4CCAFB9E"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "EcommerceVPCPublicSubnet2EIP1BAA72AD": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/EIP"
   }
  },
  "EcommerceVPCPublicSubnet2NATGateway5AB42647": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EcommerceVPCPublicSubnet2EIP1BAA72AD",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPublicSubnet2Subnet648A4090"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "DependsOn": [
    "EcommerceVPCPublicSubnet2DefaultRouteF7734C2D",
    "EcommerceVPCPublicSubnet2RouteTableAssociation41FAADC7"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet2/NATGateway"
   }
  },
  "EcommerceVPCPublicSubnet3Subnet6083921E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3/Subnet"
   }
  },
  "EcommerceVPCPublicSubnet3RouteTableBE9B587C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3/RouteTable"
   }
  },
  "EcommerceVPCPublicSubnet3RouteTableAssociationEAC3590D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet3RouteTableBE9B587C"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPublicSubnet3Subnet6083921E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3/RouteTableAssociation"
   }
  },
  "EcommerceVPCPublicSubnet3DefaultRoute9A2AE282": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcommerceVPCIGW14978A73"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPublicSubnet3RouteTableBE9B587C"
    }
   },
   "DependsOn": [
    "EcommerceVPCVPCGW4CCAFB9E"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PublicSubnet3/DefaultRoute"
   }
  },
  "EcommerceVPCPrivateSubnet1SubnetB008B123": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1/Subnet"
   }
  },
  "EcommerceVPCPrivateSubnet1RouteTableE54EE6BB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1/RouteTable"
   }
  },
  "EcommerceVPCPrivateSubnet1RouteTableAssociation6592DCE6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet1RouteTableE54EE6BB"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPrivateSubnet1SubnetB008B123"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EcommerceVPCPrivateSubnet1DefaultRoute5EBF0D71": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcommerceVPCPublicSubnet1NATGateway56B50EFC"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet1RouteTableE54EE6BB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "EcommerceVPCPrivateSubnet2Subnet9415FEB9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2/Subnet"
   }
  },
  "EcommerceVPCPrivateSubnet2RouteTableEB68C2EE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2/RouteTable"
   }
  },
  "EcommerceVPCPrivateSubnet2RouteTableAssociationD39D3059": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet2RouteTableEB68C2EE"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPrivateSubnet2Subnet9415FEB9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EcommerceVPCPrivateSubnet2DefaultRoute08F167D7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcommerceVPCPublicSubnet2NATGateway5AB42647"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet2RouteTableEB68C2EE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "EcommerceVPCPrivateSubnet3SubnetAF1A59B0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3/Subnet"
   }
  },
  "EcommerceVPCPrivateSubnet3RouteTable18773908": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3/RouteTable"
   }
  },
  "EcommerceVPCPrivateSubnet3RouteTableAssociation0D3FC088": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet3RouteTable18773908"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCPrivateSubnet3SubnetAF1A59B0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "EcommerceVPCPrivateSubnet3DefaultRoute4F688168": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcommerceVPCPublicSubnet1NATGateway56B50EFC"
    },
    "RouteTableId": {
     "Ref": "EcommerceVPCPrivateSubnet3RouteTable18773908"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/PrivateSubnet3/DefaultRoute"
   }
  },
  "EcommerceVPCIsolatedSubnet1Subnet14C095AA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.6.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet1/Subnet"
   }
  },
  "EcommerceVPCIsolatedSubnet1RouteTableD791B9FF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet1/RouteTable"
   }
  },
  "EcommerceVPCIsolatedSubnet1RouteTableAssociationE93DAD55": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCIsolatedSubnet1RouteTableD791B9FF"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCIsolatedSubnet1Subnet14C095AA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "EcommerceVPCIsolatedSubnet2Subnet90D5F6B8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.7.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet2/Subnet"
   }
  },
  "EcommerceVPCIsolatedSubnet2RouteTable8AB6F496": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet2/RouteTable"
   }
  },
  "EcommerceVPCIsolatedSubnet2RouteTableAssociationD4AC7C0D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCIsolatedSubnet2RouteTable8AB6F496"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCIsolatedSubnet2Subnet90D5F6B8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "EcommerceVPCIsolatedSubnet3SubnetE746962B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2c",
    "CidrBlock": "10.0.8.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet3/Subnet"
   }
  },
  "EcommerceVPCIsolatedSubnet3RouteTableEC8B1E2B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet3"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet3/RouteTable"
   }
  },
  "EcommerceVPCIsolatedSubnet3RouteTableAssociation0C6E9FBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcommerceVPCIsolatedSubnet3RouteTableEC8B1E2B"
    },
    "SubnetId": {
     "Ref": "EcommerceVPCIsolatedSubnet3SubnetE746962B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IsolatedSubnet3/RouteTableAssociation"
   }
  },
  "EcommerceVPCIGW14978A73": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/IGW"
   }
  },
  "EcommerceVPCVPCGW4CCAFB9E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EcommerceVPCIGW14978A73"
    },
    "VpcId": {
     "Ref": "EcommerceVPC0C8C3771"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/VPCGW"
   }
  },
  "EcommerceVPCRestrictDefaultSecurityGroupCustomResource36AC4252": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "EcommerceVPC0C8C3771",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "820242933814"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "EcommerceVPCFlowLogsIAMRole90AA8289": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "vpc-flow-logs.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/FlowLogs"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/FlowLogs/IAMRole/Resource"
   }
  },
  "EcommerceVPCFlowLogsIAMRoleDefaultPolicyBB49023E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "EcommerceVPCFlowLogsLogGroup0B1D4A40",
         "Arn"
        ]
       }
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "EcommerceVPCFlowLogsIAMRole90AA8289",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "EcommerceVPCFlowLogsIAMRoleDefaultPolicyBB49023E",
    "Roles": [
     {
      "Ref": "EcommerceVPCFlowLogsIAMRole90AA8289"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/FlowLogs/IAMRole/DefaultPolicy/Resource"
   }
  },
  "EcommerceVPCFlowLogsLogGroup0B1D4A40": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/FlowLogs"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/FlowLogs/LogGroup/Resource"
   }
  },
  "EcommerceVPCFlowLogsFlowLog75F12336": {
   "Type": "AWS::EC2::FlowLog",
   "Properties": {
    "DeliverLogsPermissionArn": {
     "Fn::GetAtt": [
      "EcommerceVPCFlowLogsIAMRole90AA8289",
      "Arn"
     ]
    },
    "LogDestinationType": "cloud-watch-logs",
    "LogGroupName": {
     "Ref": "EcommerceVPCFlowLogsLogGroup0B1D4A40"
    },
    "ResourceId": {
     "Ref": "EcommerceVPC0C8C3771"
    },
    "ResourceType": "VPC",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Name",
      "Value": "PrimaryNetworkStack/EcommerceVPC/FlowLogs"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "TrafficType": "ALL"
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/EcommerceVPC/FlowLogs/FlowLog"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-southeast-2:820242933814:security-group/",
             {
              "Fn::GetAtt": [
               "EcommerceVPC0C8C3771",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-820242933814-ap-southeast-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "PrivateZone27242E85": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "HostedZoneTags": [
     {
      "Key": "Environment",
      "Value": "Production"
     },
     {
      "Key": "Project",
      "Value": "Ecommerce"
     }
    ],
    "Name": "ecommerce.internal.",
    "VPCs": [
     {
      "VPCId": {
       "Ref": "EcommerceVPC0C8C3771"
      },
      "VPCRegion": "ap-southeast-2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/PrivateZone/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/+1Wy27bMBD8lvAYMGrioDn4JhttKsBNBNvIoYZRrElaYU2RAh9yHUH/XlCipTyaoEV70CEnkrO7s8MVKe4oGp1fROcnsDdnhO7OBN9E1cIC2WHYm+8VI6OouivIqkI5/IwfDBqjU4SRBHsNlu3hcESM20hmp0pueeY0WK4kGq8qJCFnT1yWh8IDqdsIThBGhFP9FcyucarxGxGal2DZ34QkRgmwjL6IWddrPN3Ku3SKWyGLJmxVISiBC9hwwe3hm5JH2rIgCQ1zTzURiuzCOoeiJUmKWzkDJ8k9GlvtGEa8KK+mz9zBGJ7JpCivYko1M+ZWTjULFQsbGoSKRgilN923RuMVOkXrwQgchor3Mv1ZmZob194zP5srZ9kSNoL1eI/FxijCG4LO2U8+Jakf+mLj8Fv47xd4C8IMoOb/JmM4SgYiYzhKBiJjOEreZbzLGLSM5gFLp [...]
   },
   "Metadata": {
    "aws:cdk:path": "PrimaryNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VPCId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "EcommerceVPC0C8C3771"
   },
   "Export": {
    "Name": "PrimaryNetworkStack-VPCId"
   }
  },
  "PrivateHostedZoneId": {
   "Description": "Private Hosted Zone ID",
   "Value": {
    "Ref": "PrivateZone27242E85"
   },
   "Export": {
    "Name": "PrimaryNetworkStack-PrivateHostedZoneId"
   }
  },
  "ExportsOutputRefEcommerceVPC0C8C3771FD31C558": {
   "Value": {
    "Ref": "EcommerceVPC0C8C3771"
   },
   "Export": {
    "Name": "PrimaryNetworkStack:ExportsOutputRefEcommerceVPC0C8C3771FD31C558"
   }
  },
  "ExportsOutputRefEcommerceVPCPrivateSubnet1SubnetB008B1231ADABD21": {
   "Value": {
    "Ref": "EcommerceVPCPrivateSubnet1SubnetB008B123"
   },
   "Export": {
    "Name": "PrimaryNetworkStack:ExportsOutputRefEcommerceVPCPrivateSubnet1SubnetB008B1231ADABD21"
   }
  },
  "ExportsOutputRefEcommerceVPCPrivateSubnet2Subnet9415FEB9B07FD07F": {
   "Value": {
    "Ref": "EcommerceVPCPrivateSubnet2Subnet9415FEB9"
   },
   "Export": {
    "Name": "PrimaryNetworkStack:ExportsOutputRefEcommerceVPCPrivateSubnet2Subnet9415FEB9B07FD07F"
   }
  },
  "ExportsOutputRefEcommerceVPCPrivateSubnet3SubnetAF1A59B02C71B9C9": {
   "Value": {
    "Ref": "EcommerceVPCPrivateSubnet3SubnetAF1A59B0"
   },
   "Export": {
    "Name": "PrimaryNetworkStack:ExportsOutputRefEcommerceVPCPrivateSubnet3SubnetAF1A59B02C71B9C9"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
